# TREK

./: README.md  environment.yml  pyproject.toml
trek/: LICENSE  README.md  __init__.py  alignment_processor.py  apa_finder.py  gff_processor.py  gtf2bed.pl  gtf_processor.py  internal_priming_filter.py  run_trek.py  setup.py  utils.py
